<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Go For Change</string>
    <string name="action_submit_answers">Verzend opgeslagen antwoordreeksen</string>
    <string name="introduction_text">Welkom bij Go For Change!</string>
    <string name="start_survery">Open de vragenlijst</string>
    <string name="unrestored_survey_found">We hebben een onafgewerkte vragenlijst gevonden. Indien u deze nu niet herstelt en verder afwerkt, wordt deze verwijderd.</string>
    <string name="restore_survey">Herstel de vragenlijst</string>
    <string name="title_activity_send_saved_surveys">Verzenden</string>
    <string name="title_activity_question">Vragenlijst</string>
    <string name="action_quit_survey">Stop vragenlijst</string>
    <string name="next_question">Volgende vraag</string>
    <string name="title_activity_user_info">Gebruikersgegevens</string>
    <string name="ask_user_data">Indien u dat wenst of indien u hiervoor heeft aangegeven bereid te zijn tot verdere samenwerking,
        kan u hier uw contactinformatie invullen. Dat is optioneel maar stelt ons in staat u op de hoogte te houden van de resultaten van het onderzoek.
        Uw contactgegevens worden in geen geval openbaar gemaakt en alle antwoorden op deze vragenlijst worden anoniem verwerkt.</string>
    <string name="company_name">Bedrijfsnaam</string>
    <string name="company_postal">Postcode bedrijf</string>
    <string name="respondent_name">Naam respondent</string>
    <string name="respondent_mail">E-mail respondent</string>
    <string name="finish_survey">Beëindig vragenlijst</string>
    <string name="invalid_text">Gelieve een antwoord in te vullen.</string>
    <string name="invalid_answer">Ongeldig antwoord</string>
    <string name="invalid_number">Het ingevoerde getal, %1$d, is niet geldig.</string>
    <string name="invalid_year">Het ingevoerde getal, %1$d, is geen geldig jaartal. Zorg ervoor dat u het jaartal als een getal van 4 cijfers invoert (bvb. 2014 en niet 14).</string>
    <string name="invalid_choices">Gelieve minstens %1$d keuze(s) aan te duiden. U duidde er %2$d aan.</string>
    <string name="thank_you_completion">U heeft de vragenlijst succesvol ingevuld. Hartelijk dank voor uw waardevolle medewerking! Indien u uw gegevens correct achtergelaten heeft, ontvangt u na afloop van het onderzoek persoonlijk de onderzoeksresultaten en een uitnodiging voor de studiedag.</string>
    <string name="jump_to_number">Ga meteen naar getal naar keuze</string>
    <string name="enter_ranged_number">Vul aub een getal in tussen %1$d en %2$d.</string>
    <string name="ok">Ok</string>
    <string name="cancel">Annuleren</string>
    <string name="send_via_intent">Verzend gegevens via...</string>
    <string name="save_on_storage">Sla gegevens op op geheugen van apparaat</string>
    <string name="clear_respondents">Verwijder alle antwoorden van alle respondenten</string>
    <string name="respondents_cleared">Alle gegevens over de respondenten werden verwijderd.</string>
    <string name="error_file_export">Er trad een fout op bij het exporteren van de gegevens.</string>
    <string name="success_file_export">Het bestand is succesvol weggeschreven.</string>
</resources>
